add first unit tests, add func to sync OAS2 with our OAS3, decouple test setup
