# public/docs/openApi2.json
@@ -1,120 +1,173 @@
 {
   "swagger": "2.0",
   "info": {
-    "version": "1.0.0",
-    "title": "League Tracking API",
-    "description": "API to track league results",
     "contact": {
       "email": "rwalle61@yahoo.com"
-    }
+    },
+    "description": "API to track league results",
+    "license": {
+      "name": "MIT",
+      "url": "https://opensource.org/licenses/MIT"
+    },
+    "title": "League Tracking API",
+    "version": "1.0.0"
   },
   "host": "leaguetracker.appspot.com",
   "basePath": "/",
   "schemes": [
     "https"
   ],
-  "consumes": [
-    "application/json"
-  ],
-  "produces": [
-    "application/json"
-  ],
   "paths": {
+    "/": {
+      "get": {
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "App healthy"
+          }
+        },
+        "summary": "Health endpoint"
+      }
+    },
+    "/api-docs": {
+      "get": {
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Got this API's docs"
+          }
+        },
+        "summary": "Get this API's docs"
+      }
+    },
+    "/api-docs/openApi/raw": {
+      "get": {
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Got this API's OAS as JSON"
+          }
+        },
+        "summary": "Get this API's OAS as JSON"
+      }
+    },
+    "/api-docs/openApi/raw/2": {
+      "get": {
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Got this API's OAS2 as JSON"
+          }
+        },
+        "summary": "Get this API's OAS2 as JSON"
+      },
+      "put": {
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Synced this API's OAS2 with its OAS3"
+          }
+        },
+        "tags": [
+          "admin"
+        ],
+        "summary": "Sync this API's OAS2 with its OAS3"
+      }
+    },
+    "/api-docs/openApi/raw/3": {
+      "get": {
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Got this API's OAS as JSON"
+          }
+        },
+        "summary": "Get this API's OAS as JSON"
+      }
+    },
     "/players": {
       "get": {
-        "description": "A list of players",
-        "summary": "A list of players",
-        "tags": [
-          "users"
-        ],
-        "operationId": "PlayersGet",
-        "deprecated": false,
         "produces": [
           "application/json"
         ],
         "parameters": [],
         "responses": {
           "200": {
-            "description": "player info",
+            "description": "Got player info",
             "schema": {
-              "type": "array",
               "items": {
                 "$ref": "#/definitions/Player"
-              }
-            },
-            "headers": {}
-          },
-          "400": {
-            "description": "bad input parameter",
-            "schema": {}
-          },
-          "404": {
-            "description": "The specified resource was not found.",
-            "schema": {}
+              },
+              "type": "array"
+            }
           }
-        }
+        },
+        "tags": [
+          "users"
+        ],
+        "summary": "List all players"
       }
     },
     "/players/{id}": {
       "get": {
-        "description": "A single player",
-        "summary": "A single player",
-        "tags": [
-          "users"
-        ],
-        "operationId": "PlayersByIdGet",
-        "deprecated": false,
         "produces": [
           "application/json"
         ],
         "parameters": [
           {
-            "name": "id",
             "in": "path",
+            "name": "id",
             "required": true,
-            "type": "string",
-            "description": ""
+            "type": "string"
           }
         ],
         "responses": {
           "200": {
-            "description": "player info",
+            "description": "Got player info",
             "schema": {
               "$ref": "#/definitions/Player"
-            },
-            "headers": {}
+            }
           },
           "400": {
-            "description": "bad input parameter",
-            "schema": {}
+            "description": "Bad input parameter"
           },
           "404": {
-            "description": "The specified resource was not found.",
-            "schema": {}
+            "description": "The specified resource was not found."
           }
-        }
+        },
+        "tags": [
+          "users"
+        ],
+        "summary": "Get a single player"
       }
     },
     "/seasons": {
       "post": {
-        "description": "create a new season",
-        "summary": "create a new season",
-        "tags": [
-          "users"
+        "consumes": [
+          "application/json"
         ],
-        "operationId": "SeasonsPost",
-        "deprecated": false,
         "produces": [
           "application/json"
         ],
         "parameters": [
           {
-            "name": "body",
-            "in": "body",
-            "required": true,
             "description": "season creation options",
+            "in": "body",
+            "name": "body",
+            "required": true,
             "schema": {
-              "$ref": "#/definitions/SeasonsRequest"
+              "properties": {
+                "playersOptions": {
+                  "items": {
+                    "$ref": "#/definitions/Player"
+                  },
+                  "type": "array"
+                },
+                "seasonName": {
+                  "type": "string"
+                }
+              },
+              "type": "object"
             }
           }
         ],
@@ -122,25 +175,43 @@
           "201": {
             "description": "Season created",
             "schema": {
-              "$ref": "#/definitions/SeasonsResponse"
-            },
-            "headers": {}
+              "properties": {
+                "players": {
+                  "items": {
+                    "$ref": "#/definitions/Player"
+                  },
+                  "type": "array"
+                },
+                "seasonName": {
+                  "type": "string"
+                }
+              },
+              "type": "object"
+            }
           },
           "400": {
-            "description": "bad input parameter",
-            "schema": {}
+            "description": "Bad input parameter"
           }
-        }
+        },
+        "tags": [
+          "users"
+        ],
+        "summary": "Create a new season"
       }
     }
   },
   "definitions": {
+    "ID": {
+      "type": "string"
+    },
     "Player": {
-      "title": "Player",
-      "type": "object",
       "properties": {
         "id": {
-          "type": "string"
+          "$ref": "#/definitions/ID"
+        },
+        "losses": {
+          "example": 1,
+          "type": "integer"
         },
         "name": {
           "example": "Craig Forrest",
@@ -148,63 +219,37 @@
         },
         "score": {
           "example": 990,
-          "type": "integer",
-          "format": "int32"
+          "type": "integer"
         },
         "wins": {
           "example": 0,
-          "type": "integer",
-          "format": "int32"
-        },
-        "losses": {
-          "example": 1,
-          "type": "integer",
-          "format": "int32"
+          "type": "integer"
         }
       },
       "required": [
-        "id",
         "name",
         "score",
         "wins",
         "losses"
-      ]
-    },
-    "SeasonsRequest": {
-      "title": "SeasonsRequest",
-      "type": "object",
-      "properties": {
-        "seasonName": {
-          "type": "string"
-        },
-        "playersOptions": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/Player"
-          }
-        }
-      }
-    },
-    "SeasonsResponse": {
-      "title": "SeasonsResponse",
-      "type": "object",
-      "properties": {
-        "seasonName": {
-          "type": "string"
-        },
-        "players": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/Player"
-          }
-        }
-      }
+      ],
+      "type": "object"
     }
   },
   "tags": [
     {
-      "name": "users",
-      "description": "Operations available to regular users"
+      "description": "Operations available to regular users",
+      "name": "users"
+    },
+    {
+      "description": "Operations available only to authenticated admins",
+      "name": "admin"
     }
-  ]
+  ],
+  "x-components": {
+    "responses": {
+      "404NotFound": {
+        "description": "The specified resource was not found."
+      }
+    }
+  }
 }
